--- a/khatea/module2-solution bautista html file.html
+++ b/khatea/module2-solution bautista html file.html
@@ -4,7 +4,7 @@
  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Module 2 assignment -Khatea</title>
-     <link rel="stylesheet" href="kaycee.css">
+     <link rel="stylesheet" href="module2-solution bautista css file.css">
 </head>
 
 
